Done user creation and authentication